# atlas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: architecture.md  coding.md  knowledge-base.md  security.md  testing.md
config/: atlas.yaml
docs/: architecture.md
hardware/: bom.md
knowledge/: INDEX.md  README.md
knowledge/_meta/: glossary.md  maintenance-guide.md  standards.md
knowledge/contracts/: README.md  cli.md  configuration.md
knowledge/entities/: _template.md  assistant-layer.md  atlas.md  entities-index.md  integration-layer.md  voice-layer.md
knowledge/guides/: _template.md  configuration.md  guides-index.md  system-architecture.md  text-first-assistant.md
knowledge/troubleshooting/: _template.md  configuration-validation.md  index.md  openai-authentication.md
scripts/: bootstrap.sh
src/atlas/: __init__.py  cli.py
src/atlas/assistant/: __init__.py  errors.py  factory.py  service.py  types.py
src/atlas/assistant/providers/: __init__.py  openai.py
src/atlas/config/: __init__.py  loader.py  models.py
src/atlas/integrations/: __init__.py
src/atlas/logging/: __init__.py  setup.py
src/atlas/voice/: __init__.py
tests/: test_assistant.py  test_cli.py  test_config.py  test_factory.py  test_logging.py  test_openai_provider.py
