[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-assistant"
version = "0.1.0"
description = "A modular, self-hosted voice assistant for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Adam Kerr" }]
dependencies = [
  "openai>=1.109,<2",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "PyYAML>=6.0,<7",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
atlas = "atlas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["atlas"]
